--- a/commontitlebar/build.gradle
+++ b/commontitlebar/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 //提交到仓库中的版本号
-version = "1.0.0"
+version = "1.1.0"
+
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 10
@@ -11,3 +14,108 @@ android {
 
     }
 }
+
+////添加
+//publish {
+//    userOrg = 'jxnk25'//bintray.com用户名
+//    groupId = 'com.xhb'//jcenter上的路径
+//    artifactId = 'commontitlebar'//项目名称
+//    publishVersion = '1.1.0'//版本号
+//    desc = 'Oh hi, this is a nice commontitlebar for a project, right?'//描述，不重要
+//    website = 'https://github.com/xiaohaibin/CommonTitleBar'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+//}
+//
+//allprojects {
+//    tasks.withType(Javadoc) {
+//        options{
+//            encoding "UTF-8"
+//            charSet 'UTF-8'
+//            links "http://docs.oracle.com/javase/7/docs/api"
+//        }
+//    }
+//}
+
+///方法1
+def siteUrl = 'https://github.com/xiaohaibin/CustomTitileBar'      // 项目的主页   这个是说明，可随便填
+def gitUrl = 'https://github.com/xiaohaibin/CustomTitileBar'      // Git仓库的url  这个是说明，可随便填
+group = "com.xhb"    // 这里是groupId ,必须填写  一般填你唯一的包名
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                // Add your description here
+                name 'Android Commontitlebar'     //项目描述
+                url siteUrl
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'jxnk25'        //填写开发者的一些基本信息
+                        name 'jxnk25'    //填写开发者的一些基本信息
+                        email 'xhb_199409@163.com'   //填写开发者的一些基本信息
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
+    key = properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "Commontitlebar"    //发布到JCenter上的项目名字，必须填写
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+}
+
+javadoc {
+    options{
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        author true
+        version true
+        links "http://docs.oracle.com/javase/7/docs/api"
+    }
+}
+
+
+
+
