--- a/commontitlebar/build.gradle
+++ b/commontitlebar/build.gradle
@@ -2,17 +2,20 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 //提交到仓库中的版本号
-version = "1.1.0"
+version = "1.2.0"
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 23
-
+        minSdkVersion 14
+        targetSdkVersion 25
     }
+}
+
+dependencies {
+    compile 'com.android.support:appcompat-v7:25.3.1'
 }
 
 ///方法1
